# tidb.ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  docker-compose-cn.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  env.d.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  releases  tailwind.config.ts  tsconfig.json  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bootstrap.py  main.py  prestart.sh  pyproject.toml  rag_vm.ipynb  rag_vm_v2.ipynb  requirements.txt  supervisord.conf  tools_calling_experinment.ipynb
backend/app/: celery.py  exceptions.py  schemas.py  types.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 00534dc350db_.py  041fbef26e3a_.py  04d4f05116ed_.py  04d81be446c3_.py  0a9a86063372_.py  10f36e8a25c4_.py  197bc8be72d1_.py  27a6723b767a_.py  2fc10c21bf88_.py  30a532f1b3fa_.py  40e9c98fa559_.py  472dc28f3d28_.py  680a9c5abc04_.py  6eb6b4648a8b_multiple_kb.py  749767db5505_add_recommend_questions.py  7b40dab31ebd_.py  8093333c0d87_.py  8248a83756fd_.py  830fd9c44f39_.py  83e81f4c63d6_evaluation.py  893aff1b8621_.py  94b198e20946_.py  9c0e71d0e49b_init.py  a54f966436ce_evaluation.py  a8c79553c9f6_.py  ac6e4d58580d_.py  b2b931d629f5_init.py  bd17a4ebccc5_.py  bedd6334a769_.py  c24984705d42_.py  c7f016a904c1_.py  d2ad44deab20_multiple_kb.py  d9c17a1ed3f7_.py  dfee070b8abd_.py  e32f1e546eec_.py  eb0b85608c0a_.py  ec38bdc16f3b_add_chunks_vector_status.py  fdf09af57edd_.py
backend/app/api/: deps.py  main.py
backend/app/api/admin_routes/: chat_engine.py  data_source.py  document.py  documents.py  evaluation.py  feedback.py  graph_editor.py  langfuse.py  llm.py  models.py  rag_index.py  retrieve.py  semantic_cache.py  site_setting.py  stats.py  upload.py
backend/app/api/routes/: api_key.py  chat.py  feedback.py  index.py  models.py  rag_index.py  user.py
backend/app/auth/: api_keys.py  db.py  users.py
backend/app/core/: config.py  db.py
backend/app/evaluation/: evals.py
backend/app/evaluation/eval_dataset/: asktug.py  main.py  model.py  output.py
backend/app/evaluation/evaluators/: __init__.py  e2e_rag_evaluator.py  language_detector.py  toxicity.py
backend/app/experiments/: sql_extraction.py  sql_sample_gen.py
backend/app/file_storage/: __init__.py  base.py  local.py
backend/app/models/: __init__.py  api_key.py  auth.py  base.py  chat.py  chat_engine.py  chat_message.py  chunk.py  data_source.py  document.py  embed_model.py  entity.py  evaluation_dataset.py  evaluation_task.py  feedback.py  knowledge_base.py  knowledge_graph.py  llama_index_chunk.py  llama_index_document.py  llm.py  option.py  recommend_question.py  relationship.py  reranker_model.py  semantic_cache.py  site_setting.py  staff_action_log.py  upload.py
backend/app/models/knowledge_base_scoped/: registry.py  (+1 more)
backend/app/rag/: build.py  build_index.py  chat.py  chat_config.py  chat_stream_protocol.py  default_prompt.py  embed_model_option.py  llm_option.py  query_dispatcher.py  reranker_model_option.py  retrieve.py  router.py  schema.py  types.py  utils.py
backend/app/repositories/: __init__.py  base_repo.py  chat.py  chat_engine.py  chunk.py  data_source.py  document.py  embedding_model.py  entity.py  graph.py  knowledge_base.py  llm.py  option.py  relationship.py  reranker.py  reranker_model.py  staff_action_log.py
backend/app/site_settings/: __init__.py  default.py  default_settings.yml  types.py
backend/app/staff_action/: __init__.py
backend/app/tasks/: __init__.py  build_index.py  datasource.py  evaluate.py  import_document.py  knowledge_base.py  rag_build.py  test.py
backend/app/utils/: aes.py  dspy.py  uuid6.py
backend/dspy_compiled_program/: compile_query_composition.ipynb  decompose_prerequisites_program  decompose_query_program  decompose_query_samples.json  prerequisite_samples.pkl  sql_sample.csv  sql_sample_extraction.csv  sql_sample_extraction_program  sql_sample_gen_program  sql_samples_gen.ipynb
backend/local_embedding_reranker/: Dockerfile  main.py  requirements.txt
backend/notebook/: contextual_embeddings.ipynb
(+1371 files in other folders)
