[project]
name = "tidb-ai-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wd0517", email = "me@wangdi.ink" }
]
dependencies = [
    "fastapi>=0.115.4",
    "sqlmodel==0.0.19",
    "pymysql>=1.1.1",
    "celery>=5.4.0",
    "dspy-ai>=2.4.9",
    "langfuse>=2.48.0",
    "llama-index>=0.11.10",
    "alembic>=1.13.1",
    "pydantic>=2.8.2",
    # Update Check: https://github.com/pydantic/pydantic/issues/8061
    "pydantic-settings>=2.3.3",
    "sentry-sdk>=2.5.1",
    "click>=8.1.7",
    "uvicorn>=0.30.3",
    "tenacity~=8.4.0",
    "redis>=5.0.5",
    "flower>=2.0.1",
    "llama-index-llms-gemini>=0.1.11",
    "tidb-vector>=0.0.14",
    "deepdiff>=7.0.1",
    "python-dotenv>=1.0.1",
    "fastapi-users>=13.0.0",
    "asyncmy>=0.2.9",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "llama-index-postprocessor-jinaai-rerank>=0.1.6",
    "httpx-oauth>=0.14.1",
    "jinja2>=3.1.4",
    "fastapi-pagination>=0.12.25",
    "gunicorn>=22.0.0",
    "pyyaml>=6.0.1",
    "anthropic[vertex]>=0.28.1",
    "google-cloud-aiplatform>=1.59.0",
    "deepeval>=0.21.73",
    "llama-index-llms-openai>=0.1.27",
    "llama-index-llms-openai-like>=0.1.3",
    "playwright>=1.45.1",
    "markdownify>=0.13.1",
    "llama-index-postprocessor-cohere-rerank>=0.1.7",
    "llama-index-llms-bedrock>=0.1.12",
    "pypdf>=4.3.1",
    "llama-index-llms-ollama<=0.3.0",
    "llama-index-embeddings-ollama<=0.3.0",
    "llama-index-embeddings-jinaai<=0.3.0",
    "llama-index-embeddings-cohere<=0.3.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "colorama>=0.4.6",
    "openpyxl>=3.1.5",
    "fastapi-cli>=0.0.5",
    "retry>=0.9.2",
    "ragas>=0.2.5",
    "langchain-openai>=0.2.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
universal = true
dev-dependencies = []
